--- a/it/progetti/expo-piastra.html
+++ b/it/progetti/expo-piastra.html
@@ -70,29 +70,29 @@
 <!--#1-->
   <section class="duo">
     <div style="margin-top: 100px;">
-      <h2>Parco Della Pace</h2>
-      <h1>Vicenza</h1>
+      <h2>Opere paesaggistiche del sito espositivo Expo 2015 (Piastra)</h2>
+      <h1>Milano</h1>
     </div>
   </section>
 
   <section class="duo">
     <div>
-      <p>Il progetto riguarda una superficie complessiva di 650.000 m2 corrispondente a oltre metà dell’ex infrastruttura dismessa dell’Aeroporto Dal Molin. La grande dimensione e le caratteristiche specifiche del parco lo candidano a diventare un parco metropolitano, un polo attrattivo a scala territoriale. . Questa opera di trasformazione urbanistica e paesaggistica non è solo un tentativo di riconquista della natura dove l’acqua e la vegetazione sono protagoniste indiscusse, ma ha anche l’ambizione di essere un nuovo fulcro del sistema del verde della città di Vicenza, fungendo da congiunzione tra la città storica, i comuni adiacenti e un'area territoriale ancora più vasta. ). Il progetto si inserisce all’interno del contesto di pianificazione urbanistica territoriale del Veneto e si caratterizza come un grande intervento di valorizzazione, promozione e salvaguardia del territorio e del suo mosaico ecologico, esso è caratterizzato da zone umide, boschetti igrofili e planiziali, filari e siepi, prati selvaggi, orti. In questo senso il progetto è concepito nell’ottica di una Green Infrastructure, forte nelle sue interconnessioni territoriali. Come Infrastruttura verde, calcolata ingegneristicamente, il nuovo parco sarà in grado di erogare servizi ecosistemici a 360°, e grazie all’integrazione di soluzioni innovative come I SUDS (Sistemi Di Drenaggio Urbano Sostenibile) e le cosiddette Nature Based Solutions (NBS) contribuirà nella mitigazione gli effetti deleteri del cambiamento climatico e promuoverà la sostenibilità ambientale.</p>
-      <p>Dal punto di vista tecnico-ingegneristico partendo da un’area perfettamente piana è stata eseguita una movimentazione di 240.000 m³ di terreno con relativo riutilizzo al fine di  creare una nuova grande varietà di paesaggi e luoghi: canali, bacini, interventi di forestazione urbana che creano nuovi boschi, vaste praterie, aree gioco e aree dedicate allo sport, orti urbani e spazi spazi dedicati a eventi e alla cultura e alla didattica tramite la predisposizione di pannelli informativi e segnaletica per spiegare il valore ecologico del parco.</p>
-      <p>Il parco è stato progettato come un grande bacino di laminazione, capace di contenere e rilasciare lentamente fino a 100.000 metri cubi d'acqua. L'efficiente gestione delle risorse idriche, unita all'istituzione di nuovi ecosistemi umidi, va oltre il semplice drenaggio urbano: crea infatti nuovi spazi vitali per una ricca biodiversità, animale e vegetale. Grazie a questa fitta rete d’acqua, infatti, la fauna locale ha avuto l'opportunità di ripopolare rapidamente l’ambito, che si è arricchito non solo di uccelli legati all'ambiente acquatico, ma anche di altre specie ornitiche, anfibi, pesci, molluschi, artropodi insetti e mammiferi di piccola taglia.</p>
-      <p>Infine il progetto ha prestato particolare attenzione nel preservare integralmente le preesistenze, valorizzando anche la dimensione storica del sito e il riuso dell’esistente promuovendo un approccio sostenibile legato al ciclo di vita dei manufatti. In corrispondenza dell’ingresso principale del Parco, presso l'area denominata "Porta Est" è stato realizzato il recupero e la trasformazione degli ex hangar aeroportuali in spazi dedicati alla cultura, all'associazionismo e al tempo libero.</p>
+      <p>Il progetto paesaggistico per Expo Milano 2015 rappresenta un importante intervento in un parco espositivo che si configura come una nuova centralità urbana. Questa grande opera di rigenerazione di un'area industriale degradata della periferia milanese è diventata un polo attrattore a livello internazionale in occasione dell’Esposizione e una base solida per lo sviluppo attualmente in atto. Il lotto, denominato “piastra”, è dedicato alla progettazione degli spazi aperti pubblici della piastra espositiva centrale e al completamento dell’anello perimetrale di raccordo con la parte delle “interferenze” (green belt). Questo si è articolato nella progettazione e realizzazione di 7 ambiti che caratterizzano il progetto.</p>
+      <p>Nella cittadella espositiva detta “piastra” (basata sul modello insediativo del castrum come principio archetipico di generazione urbana), gli ambiti paesaggistici reinterpretano elementi del paesaggio naturale, rurale ed urbano configurandosi come spazi relazionali di socialità. Sono strutturati secondo un percorso didattico-espositivo sviluppato sul rapporto fra uomo e natura, declinato nei sette ambiti paesistici del sito: dalla naturalità primigenia del bosco esterno, alla natura rigenerata delle vasche di fitodepurazione e canali interni fruibili, alla rievocazione di elementi del paesaggio agricolo nei filari, alla collina mediterranea, espressione del paesaggio mediterraneo fra naturalità e modellazione umana, agli Hortus, citazione dell’origine agricola dell’arte dei giardini, fino ai paesaggi più urbani, conviviali e formali delle piazze.</p>
+      <p>Il progetto presenta anche le implicazioni tipiche di una grande esposizione universale con le necessarie funzioni ludico-ricreative, come dimostra la realizzazione del Children Park e i grandi spazi degli Hortus. Tra gli spazi collettivi e ricreativi rientrano piazze maggiori e minori, aree gioco, spazi di aggregazione e ristorazione (Hortus), orti didattici, giardini tematici e grandi spazi verdi per la sosta. I percorsi coprono un’ampia gamma di tipologie: dai boulevard alberati di connessione interna alle piazze maggiori e minori, alle grandi aree degli Hortus, ai percorsi perimetrali che costeggiano il grande canale che caratterizza il sito. Questi ultimi si configurano come delle vere e proprie Promenade che connettono la parte più antropica con quella più naturale del sito, enfatizzando il rapporto tra uomo e natura.</p>
+      <p>La presenza di aree boschive e acqua ha consentito di generare un alto grado di biodiversità all’interno di un contesto urbano, attirando numerose specie faunistiche e creando nuovi habitat ecologici. Uno degli aspetti più innovativi e sperimentali, anche dal punto di vista della realizzazione, consiste nella fornitura in opera di specie vegetali autoctone di vario tipo, molto sviluppate, di altezza fino a 14 metri ed età fino a 30 anni, che hanno preso possesso del sito in pochi mesi con la realizzazione di un “pronto effetto” eccezionale, mai prima realizzato su una scala così vasta e con l'uso esteso di tecniche all'avanguardia (tecniche di coltivazione in vasi air-pot e contratti di coltivazione con i vivaisti), contribuendo in modo determinante al successo della manifestazione.</p>
     </div>
     <div>
       <ul class="cartouche">
-        <li><b>Cliente</b><br>Comune di Vicenza</li>
-        <li><b>Luogo</b><br>Vicenza, Italia</li>
-        <li><b>Anno</b><br>2017 - 2022</li>
-        <li><b>Superficie</b><br>650.000 mq</li>
-        <li><b>Stato</b><br>In corso di realizzazione</li>
-        <li><b>Tipologia</b><br>Riqualificazione ambientale e paesaggistica</li>
-        <li><b>Partners</b><br>ITS Engineering S.r.l., EMF Estudi Marti Franch, Franco Zagari, Geol. Gino Lucchetta, Aspro Studio</li>
-        <li><b>Team</b><br>Gaetano Selleri, Benedetto Selleri, Lorenzo Baldini, Sara Vergani, Sara Valassina</li>
-        <li><b>Importo lavori</b><br>€ 9.700.000</li>
+        <li><b>Cliente</b><br>Metropolitana Milanese S.p.a</li>
+        <li><b>Luogo</b><br>Milano, Italia</li>
+        <li><b>Anno</b><br>2011-2015</li>
+        <li><b>Superficie</b><br>300.000 mq</li>
+        <li><b>Stato</b><br>Completato</li>
+        <li><b>Tipologia</b><br>Rigenerazione urbana</li>
+        <li><b>Partners</b><br>--</li>
+        <li><b>Team</b><br>G. Selleri, B. Selleri</li>
+        <li><b>Importo lavori</b><br>€ 24.300.000</li>
       </ul>
     </div>
   </section>
@@ -104,22 +104,6 @@
       <img src="../../library/progetti/parco-della-pace/pdp-4.jpg" alt="Parco della Pace - Vicenza" style="grid-column: 1 / span 2;">
       <img src="../../library/progetti/parco-della-pace/pdp-5.jpg" alt="Parco della Pace - Vicenza"style="grid-column: 3 / span 4;">
       <img src="../../library/progetti/parco-della-pace/pdp-7.jpg" alt="Parco della Pace - Vicenza" style="grid-column: span 3;">
-  </section>
-<!--#4--> 
-  <section class="duo" style="margin-bottom: 100px;">
-    <div>
-    </div>
-    <div>
-      <h3>Dati chiave</h3>
-      <ul class="cartouche">
-        <li><b>Canali</b><br>9 km</li>
-        <li><b>Laghi</b><br>52.000 mq</li>
-        <li><b>Aree umide allagabili</b><br>70.000 mq</li>
-        <li><b>Nuovi boschi</b><br>Grazie ad interventi di forestazione urbana (58.000 mq di boschi igrofili e 67.000 boschi mesofili)</li>
-        <li><b>Vaste praterie</b><br>360.000mq prati suddivisi in: prati alti e fioriti, prati rasati, prati umidi eseguiti con specie acquatiche e igrofile locali anche rare, e un grande “prato selvaggio)</li>
-        <li><b>Messa a dimora</b><br>8.600 piantine forestali (alberi e arbusti), e 1.400 piante sviluppate per filari regolari e irregolari</li>
-      </ul>
-    </div>
   </section>
 </main>
 
