--- a/it/progetti/alessandria.html
+++ b/it/progetti/alessandria.html
@@ -70,29 +70,34 @@
 <!--#1-->
   <section class="duo">
     <div style="margin-top: 100px;">
-      <h2>Parco Della Pace</h2>
-      <h1>Vicenza</h1>
+      <h2>Parco Marengo e del Platano di Napoleone</h2>
+      <h1>Alessandria</h1>
     </div>
   </section>
 
   <section class="duo">
     <div>
-      <p>Il progetto riguarda una superficie complessiva di 650.000 m2 corrispondente a oltre metà dell’ex infrastruttura dismessa dell’Aeroporto Dal Molin. La grande dimensione e le caratteristiche specifiche del parco lo candidano a diventare un parco metropolitano, un polo attrattivo a scala territoriale. . Questa opera di trasformazione urbanistica e paesaggistica non è solo un tentativo di riconquista della natura dove l’acqua e la vegetazione sono protagoniste indiscusse, ma ha anche l’ambizione di essere un nuovo fulcro del sistema del verde della città di Vicenza, fungendo da congiunzione tra la città storica, i comuni adiacenti e un'area territoriale ancora più vasta. ). Il progetto si inserisce all’interno del contesto di pianificazione urbanistica territoriale del Veneto e si caratterizza come un grande intervento di valorizzazione, promozione e salvaguardia del territorio e del suo mosaico ecologico, esso è caratterizzato da zone umide, boschetti igrofili e planiziali, filari e siepi, prati selvaggi, orti. In questo senso il progetto è concepito nell’ottica di una Green Infrastructure, forte nelle sue interconnessioni territoriali. Come Infrastruttura verde, calcolata ingegneristicamente, il nuovo parco sarà in grado di erogare servizi ecosistemici a 360°, e grazie all’integrazione di soluzioni innovative come I SUDS (Sistemi Di Drenaggio Urbano Sostenibile) e le cosiddette Nature Based Solutions (NBS) contribuirà nella mitigazione gli effetti deleteri del cambiamento climatico e promuoverà la sostenibilità ambientale.</p>
-      <p>Dal punto di vista tecnico-ingegneristico partendo da un’area perfettamente piana è stata eseguita una movimentazione di 240.000 m³ di terreno con relativo riutilizzo al fine di  creare una nuova grande varietà di paesaggi e luoghi: canali, bacini, interventi di forestazione urbana che creano nuovi boschi, vaste praterie, aree gioco e aree dedicate allo sport, orti urbani e spazi spazi dedicati a eventi e alla cultura e alla didattica tramite la predisposizione di pannelli informativi e segnaletica per spiegare il valore ecologico del parco.</p>
-      <p>Il parco è stato progettato come un grande bacino di laminazione, capace di contenere e rilasciare lentamente fino a 100.000 metri cubi d'acqua. L'efficiente gestione delle risorse idriche, unita all'istituzione di nuovi ecosistemi umidi, va oltre il semplice drenaggio urbano: crea infatti nuovi spazi vitali per una ricca biodiversità, animale e vegetale. Grazie a questa fitta rete d’acqua, infatti, la fauna locale ha avuto l'opportunità di ripopolare rapidamente l’ambito, che si è arricchito non solo di uccelli legati all'ambiente acquatico, ma anche di altre specie ornitiche, anfibi, pesci, molluschi, artropodi insetti e mammiferi di piccola taglia.</p>
-      <p>Infine il progetto ha prestato particolare attenzione nel preservare integralmente le preesistenze, valorizzando anche la dimensione storica del sito e il riuso dell’esistente promuovendo un approccio sostenibile legato al ciclo di vita dei manufatti. In corrispondenza dell’ingresso principale del Parco, presso l'area denominata "Porta Est" è stato realizzato il recupero e la trasformazione degli ex hangar aeroportuali in spazi dedicati alla cultura, all'associazionismo e al tempo libero.</p>
+      <p>Il progetto prevede il recupero del Parco storico di Villa Marengo e la realizzazione del Parco del Platano di Napoleone situato nei pressi dell’omonimo albero monumentale ed entrambi collocati nel quadrante Sud-Est della città di Alessandria. La progettazione si pone in continuità e a completamento del restauro del Museo Marengo dedicato a Napoleone e alla famosa battaglia, ospitato nella villa d’epoca all’interno del parco e prevede una riqualificazione del parco storico al fine di valorizzarlo e reintegrarlo nel sistema memoriale espositivo e di renderlo nuovamente fruibile con il duplice ruolo di parco-museo delle memorie napoleoniche e di parco urbano per il tempo libero, rivolto a cittadini e visitatori.</p>
+      <p>Gli interventi all’interno del parco hanno compreso: il recupero e la valorizzazione degli elementi storici, tra cui il Fontanone, l’isola di Sant’Elena, l’Ossario e le alberature storiche; la creazione di un sistema di nuovi percorsi che si integrano con i viali storici preesistenti; la riorganizzazione degli accessi e la riqualificazione del rapporto tra il parco e il centro urbano.</p>
+      <p>Il parco si suddivide in quattro grandi aree:</p>
+      <p>1. Il Giardino della Piramide: Questo rappresenta il punto di congiunzione tra il parco e il museo adiacente collocato nella villa storica.</p>
+      <p>2. Il Giardino Storico:  in cui si concentrano gli alberi più antichi del parco, per cui il progetto prevede un intervento che predilige gli aspetti conservativi, con il ripristino delle tracce dei percorsi preesistenti, la creazione di nuovi percorsi e il recupero del “Fontanone” lo specchio d’acqua, dove viene ricordato un momento particolare della storica battaglia.</p>
+      <p>3. Campo Marzio: Una vasta zona verde concepita come uno spazio multifunzionale, che possa ospitare eventi, rievocazioni e attività sportive.</p>
+      <p>4. Il Bosco di Marengo, in cui si prevede  il ripristino del laghetto, detto Lago Atlantico, che circonda la piccola isola detta di voluta nel progetto originario del parco a rievocazione del luogo dell’esilio finale di Napoleone.</p>
+      <p>Ciascuna di queste aree, pur mantenendo un carattere distintivo, è connessa alle altre attraverso un unico sistema di percorsi realizzati con materiali drenanti e naturali ed è arricchita di nuovi arredi ed attrezzature per favorire l’insediamento della fauna (nidi per uccelli, batbox, hotel per insetti).</p>
+      <p>Il parco del Platano di Napoleone, invece prevede una sistemazione dell’area a scopo didattico memoriale, valorizzando il secolare platano e un'ampia forestazione secondo uno schema di impianto di tipo naturalistico in gruppi monospecifici di più esemplari. Assieme alle opere forestali il progetto ha compreso la riattivazione dei bacini idrici e la creazione di raingarden, per la gestione delle acque meteoriche. In sintesi, la visione per il parco è quella di un luogo che unisce storia e natura, offrendo un'esperienza ricca e varia ai suoi visitatori.</p>
     </div>
     <div>
       <ul class="cartouche">
-        <li><b>Cliente</b><br>Comune di Vicenza</li>
-        <li><b>Luogo</b><br>Vicenza, Italia</li>
-        <li><b>Anno</b><br>2017 - 2022</li>
-        <li><b>Superficie</b><br>650.000 mq</li>
+        <li><b>Cliente</b><br>Comune di Alessandria</li>
+        <li><b>Luogo</b><br>Alessandria, Italia</li>
+        <li><b>Anno</b><br>2017-2019</li>
+        <li><b>Superficie</b><br>55.000 mq</li>
         <li><b>Stato</b><br>In corso di realizzazione</li>
-        <li><b>Tipologia</b><br>Riqualificazione ambientale e paesaggistica</li>
-        <li><b>Partners</b><br>ITS Engineering S.r.l., EMF Estudi Marti Franch, Franco Zagari, Geol. Gino Lucchetta, Aspro Studio</li>
-        <li><b>Team</b><br>Gaetano Selleri, Benedetto Selleri, Lorenzo Baldini, Sara Vergani, Sara Valassina</li>
-        <li><b>Importo lavori</b><br>€ 9.700.000</li>
+        <li><b>Tipologia</b><br>Parco Storico</li>
+        <li><b>Partners</b><br>Build.ing srl, geologo Filippo Valentini</li>
+        <li><b>Team</b><br>G. Selleri, B. Selleri</li>
+        <li><b>Importo lavori</b><br>€ 1.500.000</li>
       </ul>
     </div>
   </section>
@@ -104,22 +109,6 @@
       <img src="../../library/progetti/parco-della-pace/pdp-4.jpg" alt="Parco della Pace - Vicenza" style="grid-column: 1 / span 2;">
       <img src="../../library/progetti/parco-della-pace/pdp-5.jpg" alt="Parco della Pace - Vicenza"style="grid-column: 3 / span 4;">
       <img src="../../library/progetti/parco-della-pace/pdp-7.jpg" alt="Parco della Pace - Vicenza" style="grid-column: span 3;">
-  </section>
-<!--#4--> 
-  <section class="duo" style="margin-bottom: 100px;">
-    <div>
-    </div>
-    <div>
-      <h3>Dati chiave</h3>
-      <ul class="cartouche">
-        <li><b>Canali</b><br>9 km</li>
-        <li><b>Laghi</b><br>52.000 mq</li>
-        <li><b>Aree umide allagabili</b><br>70.000 mq</li>
-        <li><b>Nuovi boschi</b><br>Grazie ad interventi di forestazione urbana (58.000 mq di boschi igrofili e 67.000 boschi mesofili)</li>
-        <li><b>Vaste praterie</b><br>360.000mq prati suddivisi in: prati alti e fioriti, prati rasati, prati umidi eseguiti con specie acquatiche e igrofile locali anche rare, e un grande “prato selvaggio)</li>
-        <li><b>Messa a dimora</b><br>8.600 piantine forestali (alberi e arbusti), e 1.400 piante sviluppate per filari regolari e irregolari</li>
-      </ul>
-    </div>
   </section>
 </main>
 
