--- a/it/progetti/index.html
+++ b/it/progetti/index.html
@@ -64,8 +64,6 @@
 
 <main>
 <!--#0-->
-
-<!--#1-->
   <section class="menu">
     <button class="show-all-btn showSectionButton">Tutti i progetti</button>
     <button class="filter-btn showSectionButton" data-filter="section1">Rigenerazione spazi urbani</button>
@@ -76,77 +74,167 @@
   </section>
 
   <div class="thumbnail-shower">
-<!--#2-->
-  <section class="thumbnail news-section section1"><a class="thumb" href="parco-della-pace">
+<!--#1-->
+  <section class="thumbnail news-section section2"><a class="thumb" href="alessandria">
     <p class="cache">+</p>
-    <img src="../../library/progetti/parco-della-pace/pdp-17.JPG" alt="Parco della Pace - Vicenza">
-    <p>Parco della Pace</p><p class="quote">2024</p>
+    <img src="../../library/progetti/">
+    <p>Parco Marengo e del Platano di Napoleone</p><p class="quote">2017</p>
   </a></section>
 <!--#2-->
-  <section class="thumbnail news-section section1"><a class="thumb" href="parco-della-pace">
+  <section class="thumbnail news-section section1"><a class="thumb" href="borgaro-torinese">
     <p class="cache">+</p>
-    <img src="../../library/progetti/parco-della-pace/pdp-18.JPG" alt="Parco della Pace - Vicenza">
-    <p>Parco della Pace</p><p class="quote">2024</p>
+    <img src="../../library/progetti/">
+    <p>Piazza V. Veneto</p><p class="quote">2022</p>
   </a></section>
 <!--#3-->
-  <section class="thumbnail news-section section2"><a class="thumb" href="parco-della-pace">
+  <section class="thumbnail news-section section2"><a class="thumb" href="borgo-san-lorenzo">
     <p class="cache">+</p>
-    <img src="../../library/progetti/parco-della-pace/pdp-19.jpg" alt="Parco della Pace - Vicenza">
-    <p>Parco della Pace</p><p class="quote">2024</p>
+    <img src="../../library/progetti/">
+    <p>Parco storico di Villa Pecori Giraldi</p><p class="quote">2022</p>
   </a></section>
 <!--#4-->
-  <section class="thumbnail news-section section3"><a class="thumb" href="parco-della-pace">
+  <section class="thumbnail news-section section2"><a class="thumb" href="capo-di-ponte">
     <p class="cache">+</p>
-    <img src="../../library/progetti/parco-della-pace/pdp-20.jpg" alt="Parco della Pace - Vicenza">
-    <p>Parco della Pace</p><p class="quote">2024</p>
+    <img src="../../library/progetti/">
+    <p>Parco tematico sulle energie rinnovabili</p><p class="quote">2019</p>
   </a></section>
 <!--#5-->
-  <section class="thumbnail news-section section4"><a class="thumb" href="parco-della-pace">
+  <section class="thumbnail news-section section4"><a class="thumb" href="castagno-turbigo">
     <p class="cache">+</p>
-    <img src="../../library/progetti/parco-della-pace/pdp-21.jpg" alt="Parco della Pace - Vicenza">
-    <p>Parco della Pace</p><p class="quote">2024</p>
+    <img src="../../library/progetti/">
+    <p>Tratto ferroviaro Saronno-Vanzaghello</p><p class="quote">2005</p>
   </a></section>
 <!--#6-->
-  <section class="thumbnail news-section section5"><a class="thumb" href="parco-della-pace">
+  <section class="thumbnail news-section section3"><a class="thumb" href="discarica-ecosesto">
     <p class="cache">+</p>
-    <img src="../../library/progetti/parco-della-pace/pdp-22.jpg" alt="Parco della Pace - Vicenza">
-    <p>Parco della Pace</p><p class="quote">2024</p>
+    <img src="../../library/progetti/">
+    <p>Discarica di Cologno Monzese</p><p class="quote">1998</p>
   </a></section>
 <!--#7-->
-  <section class="thumbnail news-section section1"><a class="thumb" href="parco-della-pace">
+  <section class="thumbnail news-section section3"><a class="thumb" href="castellaneta-marina">
     <p class="cache">+</p>
-    <img src="../../library/progetti/parco-della-pace/pdp-1.jpg" alt="Parco della Pace - Vicenza">
-    <p>Parco della Pace</p><p class="quote">2024</p>
+    <img src="../../library/progetti/">
+    <p>Castellaneta Marina</p><p class="quote">2020</p>
   </a></section>
 <!--#8-->
-  <section class="thumbnail news-section section1"><a class="thumb" href="parco-della-pace">
+  <section class="thumbnail news-section section3"><a class="thumb" href="martina-franca">
     <p class="cache">+</p>
-    <img src="../../library/progetti/parco-della-pace/pdp-8.jpg" alt="Parco della Pace - Vicenza">
-    <p>Parco della Pace</p><p class="quote">2024</p>
+    <img src="../../library/progetti/">
+    <p>Parco Ortolini</p><p class="quote">2021</p>
   </a></section>
 <!--#9-->
-  <section class="thumbnail news-section section2"><a class="thumb" href="parco-della-pace">
+  <section class="thumbnail news-section section3"><a class="thumb" href="salinella">
     <p class="cache">+</p>
-    <img src="../../library/progetti/parco-della-pace/pdp-9.jpg" alt="Parco della Pace - Vicenza">
-    <p>Parco della Pace</p><p class="quote">2024</p>
+    <img src="../../library/progetti/">
+    <p>Parco del mediterraneo</p><p class="quote">2023</p>
   </a></section>
 <!--#10-->
-  <section class="thumbnail news-section section3"><a class="thumb" href="parco-della-pace">
+  <section class="thumbnail news-section section2"><a class="thumb" href="castellammare">
     <p class="cache">+</p>
-    <img src="../../library/progetti/parco-della-pace/pdp-10.jpg" alt="Parco della Pace - Vicenza">
-    <p>Parco della Pace</p><p class="quote">2024</p>
+    <img src="../../library/progetti/">
+    <p>giardino della Regia Quisisana</p><p class="quote">2021</p>
   </a></section>
 <!--#11-->
-  <section class="thumbnail news-section section4"><a class="thumb" href="parco-della-pace">
+  <section class="thumbnail news-section section1"><a class="thumb" href="cortevecchia">
     <p class="cache">+</p>
-    <img src="../../library/progetti/parco-della-pace/pdp-11.jpg" alt="Parco della Pace - Vicenza">
-    <p>Parco della Pace</p><p class="quote">2024</p>
+    <img src="../../library/progetti/">
+    <p>Piazza Cortevecchia</p><p class="quote">2022</p>
   </a></section>
 <!--#12-->
-  <section class="thumbnail news-section section5"><a class="thumb" href="parco-della-pace">
+  <section class="thumbnail news-section section4"><a class="thumb" href="depuratore-trento">
     <p class="cache">+</p>
-    <img src="../../library/progetti/parco-della-pace/pdp-12.jpg" alt="Parco della Pace - Vicenza">
-    <p>Parco della Pace</p><p class="quote">2024</p>
+    <img src="../../library/progetti/">
+    <p>Depuratore Trento Sud</p><p class="quote">2013</p>
+  </a></section>
+<!--#13-->
+  <section class="thumbnail news-section section4"><a class="thumb" href="expo-anello">
+    <p class="cache">+</p>
+    <img src="../../library/progetti/">
+    <p>Anello verde</p><p class="quote">2011</p>
+  </a></section>
+<!--#14-->
+  <section class="thumbnail news-section section1"><a class="thumb" href="expo-piastra">
+    <p class="cache">+</p>
+    <img src="../../library/progetti/">
+    <p>Expo 2015</p><p class="quote">2011</p>
+  </a></section>
+<!--#15-->
+  <section class="thumbnail news-section section1"><a class="thumb" href="giardini-messina">
+    <p class="cache">+</p>
+    <img src="../../library/progetti/">
+    <p>Giardini urbani di Messina</p><p class="quote">2022</p>
+  </a></section>
+<!--#16-->
+  <section class="thumbnail news-section section2"><a class="thumb" href="giardino-venezia">
+    <p class="cache">+</p>
+    <img src="../../library/progetti/">
+    <p>Giardino di Palazzo del Principe di Piombino</p><p class="quote">2018</p>
+  </a></section>
+<!--#17-->
+  <section class="thumbnail news-section section1"><a class="thumb" href="jinshan-marina">
+    <p class="cache">+</p>
+    <img src="../../library/progetti/">
+    <p>Jinshan Marina</p><p class="quote">2015</p>
+  </a></section>
+<!--#18-->
+  <section class="thumbnail news-section section1"><a class="thumb" href="lido-di-milano">
+    <p class="cache">+</p>
+    <img src="../../library/progetti/">
+    <p>Lido di Milano</p><p class="quote">2021</p>
+  </a></section>
+<!--#19-->
+  <section class="thumbnail news-section section4"><a class="thumb" href="milano-serravalle">
+    <p class="cache">+</p>
+    <img src="../../library/progetti/">
+    <p>SP46 Rho-Monza a Paderno Dugnano</p><p class="quote">2016</p>
+  </a></section>
+<!--#20-->
+  <section class="thumbnail news-section section2"><a class="thumb" href="museo-della-lontra">
+    <p class="cache">+</p>
+    <img src="../../library/progetti/">
+    <p>Museo sull'ecosistema Alpino</p><p class="quote">2007</p>
+  </a></section>
+<!--#21-->
+  <section class="thumbnail news-section section2"><a class="thumb" href="museo-grande-guerra">
+    <p class="cache">+</p>
+    <img src="../../library/progetti/">
+    <p>Parco Museo diffuso della Grande Guerra</p><p class="quote">1998</p>
+  </a></section>
+<!--#22-->
+  <section class="thumbnail news-section section3"><a class="thumb" href="parco-della-pace">
+    <p class="cache">+</p>
+    <img src="../../library/progetti/">
+    <p>Parco Della Pace</p><p class="quote">2017</p>
+  </a></section>
+<!--#23-->
+  <section class="thumbnail news-section section1"><a class="thumb" href="piazzale-loreto">
+    <p class="cache">+</p>
+    <img src="../../library/progetti/">
+    <p>Piazzale Loreto</p><p class="quote">2021</p>
+  </a></section>
+<!--#24-->
+  <section class="thumbnail news-section section1"><a class="thumb" href="prolungamento-m5">
+    <p class="cache">+</p>
+    <img src="../../library/progetti/">
+    <p>Prolungamento M5 da Milano a Monza</p><p class="quote">2020</p>
+  </a></section>
+<!--#25-->
+  <section class="thumbnail news-section section2"><a class="thumb" href="san-pellegrino">
+    <p class="cache">+</p>
+    <img src="../../library/progetti/">
+    <p>Giardino del Grand Hotel di San Pellegrino</p><p class="quote">2019</p>
+  </a></section>
+<!--#26-->
+  <section class="thumbnail news-section section4"><a class="thumb" href="saronno-seregno">
+    <p class="cache">+</p>
+    <img src="../../library/progetti/">
+    <p>Parco delle Groane</p><p class="quote">2005</p>
+  </a></section>
+<!--#7-->
+  <section class="thumbnail news-section section1"><a class="thumb" href="verde-precotto">
+    <p class="cache">+</p>
+    <img src="../../library/progetti/">
+    <p>Precotto</p><p class="quote">2002</p>
   </a></section>
 </div>
 </main>
