--- a/it/progetti/jinshan-marina.html
+++ b/it/progetti/jinshan-marina.html
@@ -70,29 +70,30 @@
 <!--#1-->
   <section class="duo">
     <div style="margin-top: 100px;">
-      <h2>Parco Della Pace</h2>
-      <h1>Vicenza</h1>
+      <h2>Masterplan di Jinshan Marina</h2>
+      <h1>Jinshan</h1>
     </div>
   </section>
 
   <section class="duo">
     <div>
-      <p>Il progetto riguarda una superficie complessiva di 650.000 m2 corrispondente a oltre metà dell’ex infrastruttura dismessa dell’Aeroporto Dal Molin. La grande dimensione e le caratteristiche specifiche del parco lo candidano a diventare un parco metropolitano, un polo attrattivo a scala territoriale. . Questa opera di trasformazione urbanistica e paesaggistica non è solo un tentativo di riconquista della natura dove l’acqua e la vegetazione sono protagoniste indiscusse, ma ha anche l’ambizione di essere un nuovo fulcro del sistema del verde della città di Vicenza, fungendo da congiunzione tra la città storica, i comuni adiacenti e un'area territoriale ancora più vasta. ). Il progetto si inserisce all’interno del contesto di pianificazione urbanistica territoriale del Veneto e si caratterizza come un grande intervento di valorizzazione, promozione e salvaguardia del territorio e del suo mosaico ecologico, esso è caratterizzato da zone umide, boschetti igrofili e planiziali, filari e siepi, prati selvaggi, orti. In questo senso il progetto è concepito nell’ottica di una Green Infrastructure, forte nelle sue interconnessioni territoriali. Come Infrastruttura verde, calcolata ingegneristicamente, il nuovo parco sarà in grado di erogare servizi ecosistemici a 360°, e grazie all’integrazione di soluzioni innovative come I SUDS (Sistemi Di Drenaggio Urbano Sostenibile) e le cosiddette Nature Based Solutions (NBS) contribuirà nella mitigazione gli effetti deleteri del cambiamento climatico e promuoverà la sostenibilità ambientale.</p>
-      <p>Dal punto di vista tecnico-ingegneristico partendo da un’area perfettamente piana è stata eseguita una movimentazione di 240.000 m³ di terreno con relativo riutilizzo al fine di  creare una nuova grande varietà di paesaggi e luoghi: canali, bacini, interventi di forestazione urbana che creano nuovi boschi, vaste praterie, aree gioco e aree dedicate allo sport, orti urbani e spazi spazi dedicati a eventi e alla cultura e alla didattica tramite la predisposizione di pannelli informativi e segnaletica per spiegare il valore ecologico del parco.</p>
-      <p>Il parco è stato progettato come un grande bacino di laminazione, capace di contenere e rilasciare lentamente fino a 100.000 metri cubi d'acqua. L'efficiente gestione delle risorse idriche, unita all'istituzione di nuovi ecosistemi umidi, va oltre il semplice drenaggio urbano: crea infatti nuovi spazi vitali per una ricca biodiversità, animale e vegetale. Grazie a questa fitta rete d’acqua, infatti, la fauna locale ha avuto l'opportunità di ripopolare rapidamente l’ambito, che si è arricchito non solo di uccelli legati all'ambiente acquatico, ma anche di altre specie ornitiche, anfibi, pesci, molluschi, artropodi insetti e mammiferi di piccola taglia.</p>
-      <p>Infine il progetto ha prestato particolare attenzione nel preservare integralmente le preesistenze, valorizzando anche la dimensione storica del sito e il riuso dell’esistente promuovendo un approccio sostenibile legato al ciclo di vita dei manufatti. In corrispondenza dell’ingresso principale del Parco, presso l'area denominata "Porta Est" è stato realizzato il recupero e la trasformazione degli ex hangar aeroportuali in spazi dedicati alla cultura, all'associazionismo e al tempo libero.</p>
+      <p>Il masterplan di Jinshan Marina è il risultato di un concorso internazionale mirato a trasformare circa 720 ettari del waterfront della nuova città di Jinshan in un distretto vivace e multifunzionale con una forte vocazione turistica. Questo ambizioso progetto si propone di diventare un punto di riferimento cruciale per la regione del delta del fiume Yangtze, integrando varie funzioni in un tessuto urbano coerente e dinamico.</p>
+      <p>Attraverso una serie di workshop tematici, il masterplan ha delineato una visione che sfrutta ogni area del progetto, attribuendo a ciascuna una caratterizzazione unica. La spiaggia esistente è stata rivitalizzata seguendo il modello della Riviera italiana, mentre il vecchio villaggio di pescatori è stato trasformato in uno spazio per start-up e turismo culturale. Tra il mare aperto e il bacino interno, il Lido emerge come una nuova città giardino sul mare, arricchita da un Yacht Club e un porto turistico, entrambi destinati a ospitare eventi nautici di rilievo.</p>
+      <p>Il progetto include anche un Centro Direzionale e Commerciale Centrale e un Centro di Ricerca, che si interfacciano con le aree industriali e commerciali adiacenti, promuovendo uno sviluppo economico integrato e sostenibile.</p>
+      <p>Sul fronte del paesaggio, Jinshan Marina è stata concepita come una vera infrastruttura verde, essenziale per strutturare la nuova città e fornire connessioni ecologiche vitali. Questa infrastruttura verde utilizza la natura come uno strumento per rendere l'ambiente urbano più resiliente, affrontando sfide come la sostenibilità ambientale, il riscaldamento globale e la protezione dagli agenti atmosferici. Tra i vari elementi paesaggistici, il lungomare con dune verdi offre protezione da inondazioni e tifoni, mentre i rain garden e le aree di fitodepurazione contribuiscono alla purificazione e al naturale assorbimento delle acque piovane. Le zone umide e la forestazione urbana giocano un ruolo cruciale nell'abbassamento dei livelli di CO2 e nella riduzione delle isole di calore urbane.</p>
+      <p>Inoltre, la rete ciclopedonale che attraversa il parco è integrata da un sistema museale diffuso, che esplora temi ambientali, culturali e artistici, rafforzando l'attrattività del distretto sia per i residenti sia per i visitatori. Questa rete di percorsi non solo collega le diverse aree del progetto ma favorisce anche lo sport all'aria aperta e il tempo libero, rendendo Jinshan Marina un luogo ideale per vivere, lavorare e rilassarsi.</p>
     </div>
     <div>
       <ul class="cartouche">
-        <li><b>Cliente</b><br>Comune di Vicenza</li>
-        <li><b>Luogo</b><br>Vicenza, Italia</li>
-        <li><b>Anno</b><br>2017 - 2022</li>
-        <li><b>Superficie</b><br>650.000 mq</li>
-        <li><b>Stato</b><br>In corso di realizzazione</li>
-        <li><b>Tipologia</b><br>Riqualificazione ambientale e paesaggistica</li>
-        <li><b>Partners</b><br>ITS Engineering S.r.l., EMF Estudi Marti Franch, Franco Zagari, Geol. Gino Lucchetta, Aspro Studio</li>
-        <li><b>Team</b><br>Gaetano Selleri, Benedetto Selleri, Lorenzo Baldini, Sara Vergani, Sara Valassina</li>
-        <li><b>Importo lavori</b><br>€ 9.700.000</li>
+        <li><b>Cliente</b><br>Ente banditore governo della città di Jinshan e della provincia di Shanghai</li>
+        <li><b>Luogo</b><br>Jinshan, Cina</li>
+        <li><b>Anno</b><br>2015-2019</li>
+        <li><b>Superficie</b><br>7.000.000 mq</li>
+        <li><b>Stato</b><br>Completato</li>
+        <li><b>Tipologia</b><br>Rigenerazione spazi urbani di fascia costiera</li>
+        <li><b>Partners</b><br>GALA, SD partners, studio Scacchetti, Bunch, Systematica, studio Gnudi, ARW, Barreca&La Varra, Beretta MAB Arquitectura</li>
+        <li><b>Team</b><br>G. Selleri, B. Selleri</li>
+        <li><b>Importo lavori</b><br>--</li>
       </ul>
     </div>
   </section>
@@ -104,22 +105,6 @@
       <img src="../../library/progetti/parco-della-pace/pdp-4.jpg" alt="Parco della Pace - Vicenza" style="grid-column: 1 / span 2;">
       <img src="../../library/progetti/parco-della-pace/pdp-5.jpg" alt="Parco della Pace - Vicenza"style="grid-column: 3 / span 4;">
       <img src="../../library/progetti/parco-della-pace/pdp-7.jpg" alt="Parco della Pace - Vicenza" style="grid-column: span 3;">
-  </section>
-<!--#4--> 
-  <section class="duo" style="margin-bottom: 100px;">
-    <div>
-    </div>
-    <div>
-      <h3>Dati chiave</h3>
-      <ul class="cartouche">
-        <li><b>Canali</b><br>9 km</li>
-        <li><b>Laghi</b><br>52.000 mq</li>
-        <li><b>Aree umide allagabili</b><br>70.000 mq</li>
-        <li><b>Nuovi boschi</b><br>Grazie ad interventi di forestazione urbana (58.000 mq di boschi igrofili e 67.000 boschi mesofili)</li>
-        <li><b>Vaste praterie</b><br>360.000mq prati suddivisi in: prati alti e fioriti, prati rasati, prati umidi eseguiti con specie acquatiche e igrofile locali anche rare, e un grande “prato selvaggio)</li>
-        <li><b>Messa a dimora</b><br>8.600 piantine forestali (alberi e arbusti), e 1.400 piante sviluppate per filari regolari e irregolari</li>
-      </ul>
-    </div>
   </section>
 </main>
 
