--- a/it/progetti/martina-franca.html
+++ b/it/progetti/martina-franca.html
@@ -70,29 +70,30 @@
 <!--#1-->
   <section class="duo">
     <div style="margin-top: 100px;">
-      <h2>Parco Della Pace</h2>
-      <h1>Vicenza</h1>
+      <h2>Parco Ortolini</h2>
+      <h1>Martina Franca</h1>
     </div>
   </section>
 
   <section class="duo">
     <div>
-      <p>Il progetto riguarda una superficie complessiva di 650.000 m2 corrispondente a oltre metà dell’ex infrastruttura dismessa dell’Aeroporto Dal Molin. La grande dimensione e le caratteristiche specifiche del parco lo candidano a diventare un parco metropolitano, un polo attrattivo a scala territoriale. . Questa opera di trasformazione urbanistica e paesaggistica non è solo un tentativo di riconquista della natura dove l’acqua e la vegetazione sono protagoniste indiscusse, ma ha anche l’ambizione di essere un nuovo fulcro del sistema del verde della città di Vicenza, fungendo da congiunzione tra la città storica, i comuni adiacenti e un'area territoriale ancora più vasta. ). Il progetto si inserisce all’interno del contesto di pianificazione urbanistica territoriale del Veneto e si caratterizza come un grande intervento di valorizzazione, promozione e salvaguardia del territorio e del suo mosaico ecologico, esso è caratterizzato da zone umide, boschetti igrofili e planiziali, filari e siepi, prati selvaggi, orti. In questo senso il progetto è concepito nell’ottica di una Green Infrastructure, forte nelle sue interconnessioni territoriali. Come Infrastruttura verde, calcolata ingegneristicamente, il nuovo parco sarà in grado di erogare servizi ecosistemici a 360°, e grazie all’integrazione di soluzioni innovative come I SUDS (Sistemi Di Drenaggio Urbano Sostenibile) e le cosiddette Nature Based Solutions (NBS) contribuirà nella mitigazione gli effetti deleteri del cambiamento climatico e promuoverà la sostenibilità ambientale.</p>
-      <p>Dal punto di vista tecnico-ingegneristico partendo da un’area perfettamente piana è stata eseguita una movimentazione di 240.000 m³ di terreno con relativo riutilizzo al fine di  creare una nuova grande varietà di paesaggi e luoghi: canali, bacini, interventi di forestazione urbana che creano nuovi boschi, vaste praterie, aree gioco e aree dedicate allo sport, orti urbani e spazi spazi dedicati a eventi e alla cultura e alla didattica tramite la predisposizione di pannelli informativi e segnaletica per spiegare il valore ecologico del parco.</p>
-      <p>Il parco è stato progettato come un grande bacino di laminazione, capace di contenere e rilasciare lentamente fino a 100.000 metri cubi d'acqua. L'efficiente gestione delle risorse idriche, unita all'istituzione di nuovi ecosistemi umidi, va oltre il semplice drenaggio urbano: crea infatti nuovi spazi vitali per una ricca biodiversità, animale e vegetale. Grazie a questa fitta rete d’acqua, infatti, la fauna locale ha avuto l'opportunità di ripopolare rapidamente l’ambito, che si è arricchito non solo di uccelli legati all'ambiente acquatico, ma anche di altre specie ornitiche, anfibi, pesci, molluschi, artropodi insetti e mammiferi di piccola taglia.</p>
-      <p>Infine il progetto ha prestato particolare attenzione nel preservare integralmente le preesistenze, valorizzando anche la dimensione storica del sito e il riuso dell’esistente promuovendo un approccio sostenibile legato al ciclo di vita dei manufatti. In corrispondenza dell’ingresso principale del Parco, presso l'area denominata "Porta Est" è stato realizzato il recupero e la trasformazione degli ex hangar aeroportuali in spazi dedicati alla cultura, all'associazionismo e al tempo libero.</p>
+      <p>Il progetto di riqualificazione del Parco Ortolini, situato a Martina Franca, mira a trasformare un'area pubblica esistente in un polmone verde innovativo e sostenibile, integrato perfettamente nell'ambiente urbano. Questo intervento prevede una serie di migliorie significative, che vanno dalla regimentazione delle acque meteoriche, finora incontrollate, alla creazione di un ambiente più accessibile e accogliente per i cittadini che potranno fruire in stretto contatto con la natura mediterranea.</p>
+      <p>La gestione avanzata delle acque piovane, tramite canali naturali e bacini di infiltrazione, si accompagna a interventi di ingegneria naturalistica per prevenire l'erosione e migliorare la resilienza del parco ai cambiamenti climatici. Infatti il nuovo sistema ingegneristico srà in grado di trattenere una precipitazione critica con tempo di ritorno di 10 anni. Il volume di pioggia efficace relativo a questo evento è pari a circa 3100 mc. Parallelamente, l'area viene arricchita con nuove piantumazioni di specie autoctone attraverso opere di forestazione urbana di ca. 2,5 ha, scelte per la loro capacità di integrarsi nell'ecosistema locale e ridurre la manutenzione.</p>
+      <p>Il design del parco include la revisione dei percorsi interni, rendendoli più accessibili e attrezzati con zone ombreggiate da nuove alberature, aree gioco per bambini, spazi per attività sportive e aree picnic. Questo rinnovamento non solo migliora l'attrattività e la funzionalità del parco ma promuove il benessere ambientale.</p>
+      <p>Il progetto incoraggia inoltre l'interazione comunitaria e l'educazione ambientale attraverso l'introduzione di cartellonistica informativa e la proposta di attività divulgative che sensibilizzano i visitatori sui temi della sostenibilità. Queste iniziative sono pensate per stimolare una partecipazione attiva della comunità locale nella cura e nell'uso del parco.</p>
+      <p>Con questi interventi, il Parco Ortolini è destinato a diventare un modello di rigenerazione urbana, che connette le persone con la natura e migliora la qualità della vita urbana, facendo di Martina Franca un esempio di città più verde, inclusiva e sostenibile.</p>
     </div>
     <div>
       <ul class="cartouche">
-        <li><b>Cliente</b><br>Comune di Vicenza</li>
-        <li><b>Luogo</b><br>Vicenza, Italia</li>
-        <li><b>Anno</b><br>2017 - 2022</li>
-        <li><b>Superficie</b><br>650.000 mq</li>
+        <li><b>Cliente</b><br>Comune di Martina Franca</li>
+        <li><b>Luogo</b><br>Martina Franca (TA), Italia</li>
+        <li><b>Anno</b><br>2021-2023</li>
+        <li><b>Superficie</b><br>160.000 mq</li>
         <li><b>Stato</b><br>In corso di realizzazione</li>
-        <li><b>Tipologia</b><br>Riqualificazione ambientale e paesaggistica</li>
-        <li><b>Partners</b><br>ITS Engineering S.r.l., EMF Estudi Marti Franch, Franco Zagari, Geol. Gino Lucchetta, Aspro Studio</li>
-        <li><b>Team</b><br>Gaetano Selleri, Benedetto Selleri, Lorenzo Baldini, Sara Vergani, Sara Valassina</li>
-        <li><b>Importo lavori</b><br>€ 9.700.000</li>
+        <li><b>Tipologia</b><br>Riqualificazione ambientale e paesaggistica del parco</li>
+        <li><b>Partners</b><br>ITS S.r.l., Ing. V. Dell’Erba, Ing. A. L. Romano, Dott. L. Chiffi</li>
+        <li><b>Team</b><br>G. Selleri, L. Baldini, F. Maglia</li>
+        <li><b>Importo lavori</b><br>€  1.100.000</li>
       </ul>
     </div>
   </section>
@@ -104,22 +105,6 @@
       <img src="../../library/progetti/parco-della-pace/pdp-4.jpg" alt="Parco della Pace - Vicenza" style="grid-column: 1 / span 2;">
       <img src="../../library/progetti/parco-della-pace/pdp-5.jpg" alt="Parco della Pace - Vicenza"style="grid-column: 3 / span 4;">
       <img src="../../library/progetti/parco-della-pace/pdp-7.jpg" alt="Parco della Pace - Vicenza" style="grid-column: span 3;">
-  </section>
-<!--#4--> 
-  <section class="duo" style="margin-bottom: 100px;">
-    <div>
-    </div>
-    <div>
-      <h3>Dati chiave</h3>
-      <ul class="cartouche">
-        <li><b>Canali</b><br>9 km</li>
-        <li><b>Laghi</b><br>52.000 mq</li>
-        <li><b>Aree umide allagabili</b><br>70.000 mq</li>
-        <li><b>Nuovi boschi</b><br>Grazie ad interventi di forestazione urbana (58.000 mq di boschi igrofili e 67.000 boschi mesofili)</li>
-        <li><b>Vaste praterie</b><br>360.000mq prati suddivisi in: prati alti e fioriti, prati rasati, prati umidi eseguiti con specie acquatiche e igrofile locali anche rare, e un grande “prato selvaggio)</li>
-        <li><b>Messa a dimora</b><br>8.600 piantine forestali (alberi e arbusti), e 1.400 piante sviluppate per filari regolari e irregolari</li>
-      </ul>
-    </div>
   </section>
 </main>
 
