--- a/it/progetti/museo-della-lontra.html
+++ b/it/progetti/museo-della-lontra.html
@@ -70,29 +70,30 @@
 <!--#1-->
   <section class="duo">
     <div style="margin-top: 100px;">
-      <h2>Parco Della Pace</h2>
-      <h1>Vicenza</h1>
+      <h2>Museo sull'ecosistema Alpino</h2>
+      <h1>Rovenaud</h1>
     </div>
   </section>
 
   <section class="duo">
     <div>
-      <p>Il progetto riguarda una superficie complessiva di 650.000 m2 corrispondente a oltre metà dell’ex infrastruttura dismessa dell’Aeroporto Dal Molin. La grande dimensione e le caratteristiche specifiche del parco lo candidano a diventare un parco metropolitano, un polo attrattivo a scala territoriale. . Questa opera di trasformazione urbanistica e paesaggistica non è solo un tentativo di riconquista della natura dove l’acqua e la vegetazione sono protagoniste indiscusse, ma ha anche l’ambizione di essere un nuovo fulcro del sistema del verde della città di Vicenza, fungendo da congiunzione tra la città storica, i comuni adiacenti e un'area territoriale ancora più vasta. ). Il progetto si inserisce all’interno del contesto di pianificazione urbanistica territoriale del Veneto e si caratterizza come un grande intervento di valorizzazione, promozione e salvaguardia del territorio e del suo mosaico ecologico, esso è caratterizzato da zone umide, boschetti igrofili e planiziali, filari e siepi, prati selvaggi, orti. In questo senso il progetto è concepito nell’ottica di una Green Infrastructure, forte nelle sue interconnessioni territoriali. Come Infrastruttura verde, calcolata ingegneristicamente, il nuovo parco sarà in grado di erogare servizi ecosistemici a 360°, e grazie all’integrazione di soluzioni innovative come I SUDS (Sistemi Di Drenaggio Urbano Sostenibile) e le cosiddette Nature Based Solutions (NBS) contribuirà nella mitigazione gli effetti deleteri del cambiamento climatico e promuoverà la sostenibilità ambientale.</p>
-      <p>Dal punto di vista tecnico-ingegneristico partendo da un’area perfettamente piana è stata eseguita una movimentazione di 240.000 m³ di terreno con relativo riutilizzo al fine di  creare una nuova grande varietà di paesaggi e luoghi: canali, bacini, interventi di forestazione urbana che creano nuovi boschi, vaste praterie, aree gioco e aree dedicate allo sport, orti urbani e spazi spazi dedicati a eventi e alla cultura e alla didattica tramite la predisposizione di pannelli informativi e segnaletica per spiegare il valore ecologico del parco.</p>
-      <p>Il parco è stato progettato come un grande bacino di laminazione, capace di contenere e rilasciare lentamente fino a 100.000 metri cubi d'acqua. L'efficiente gestione delle risorse idriche, unita all'istituzione di nuovi ecosistemi umidi, va oltre il semplice drenaggio urbano: crea infatti nuovi spazi vitali per una ricca biodiversità, animale e vegetale. Grazie a questa fitta rete d’acqua, infatti, la fauna locale ha avuto l'opportunità di ripopolare rapidamente l’ambito, che si è arricchito non solo di uccelli legati all'ambiente acquatico, ma anche di altre specie ornitiche, anfibi, pesci, molluschi, artropodi insetti e mammiferi di piccola taglia.</p>
-      <p>Infine il progetto ha prestato particolare attenzione nel preservare integralmente le preesistenze, valorizzando anche la dimensione storica del sito e il riuso dell’esistente promuovendo un approccio sostenibile legato al ciclo di vita dei manufatti. In corrispondenza dell’ingresso principale del Parco, presso l'area denominata "Porta Est" è stato realizzato il recupero e la trasformazione degli ex hangar aeroportuali in spazi dedicati alla cultura, all'associazionismo e al tempo libero.</p>
+      <p>L’acqua è protagonista del Centro dedicato alla ricerca ed alla valorizzazione degli ecosistemi acquatici alpini, collocato in un’area naturalistica di grande valore ambientale ed ecologico, a circa 1500 metri di altezza nel cuore del Parco Nazionale Gran Paradiso. All’ingresso un edificio ospita l’infopoint, la caffetteria ed i servizi, ed una grande tettoia è il luogo di benvenuto ed introduzione al cammino nel bosco. Lo spazio aperto passante tra i due volumi rappresenta la porta del parco.</p>
+      <p>Due le modalità di narrazione e di “immersione” nel parco, in cui passato e presente si fondono e si sovrappongono.</p>
+      <p>Una all’interno del Centro che occupa in parte il sedime di un’antica segheria, alimentata ad acqua fino a pochi anni addietro ospita l’alloggio del custode, gli spazi espositivi, le installazioni multimediali, i laboratori per attività didattica e divulgativa, gli acquari per i pesci e gli anfibi. In una sala di osservazione subacquea, attraverso una grande vetrata di 8x2 m, sorprende la spettacolare visione delle lontre nel bacino d’acqua esterno, allestito con massi ciclopici e tronchi. L’architettura è sintesi del buon costruire tradizionale, ma anche moderno, rispettoso del luogo e della volontà di integrazione con il paesaggio, non solo attraverso l’uso dei materiali locali - pietra e legno - ma anche grazie alla composizione sapiente dei volumi, ed al rapporto molteplice con il suolo: in appoggio e parzialmente interrato al piede della montagna. L’inserimento paesaggistico è completato da un tetto verde estensivo.</p>
+      <p>L’altra modalità di visita si svolge attraverso un percorso espositivo all’aperto, lungo tracciati in terra battuta e passerelle in legno sopraelevate e snodate in modo da preservare gli alberi esistenti, scandite da una serie di slarghi - punti di osservazione dotati di tabelle informative, ed originali dispositivi per l’osservazione degli animali, come gli stravaganti binocoli intagliati in pannelli di legno e la torretta di avvistamento. Si esplorano il bosco, le aree prative, le zone umide lungo i corsi d’acqua, un vecchio mulino, ci si avvicina alle vasche per l’allevamento delle lontre. E tutti i bacini sono alimentati dalle acque sorgive sempre limpidissime.</p>
+      <p>Nel Centro la lontra euroasiatica, specie posta al vertice della catena alimentare e dell’ecosistema, è oggetto di ricerca che fornisce importanti indicazioni sulla biologia della specie, per trasmetterne la conoscenza e l’importanza di conservare il suo habitat. Un tempo presente in questo territorio ed oggi scomparsa a causa del bracconaggio e delle trasformazioni ambientali, simbolo quindi delle problematiche di tutela degli ecosistemi acquatici.</p>
     </div>
     <div>
       <ul class="cartouche">
-        <li><b>Cliente</b><br>Comune di Vicenza</li>
-        <li><b>Luogo</b><br>Vicenza, Italia</li>
-        <li><b>Anno</b><br>2017 - 2022</li>
-        <li><b>Superficie</b><br>650.000 mq</li>
-        <li><b>Stato</b><br>In corso di realizzazione</li>
-        <li><b>Tipologia</b><br>Riqualificazione ambientale e paesaggistica</li>
-        <li><b>Partners</b><br>ITS Engineering S.r.l., EMF Estudi Marti Franch, Franco Zagari, Geol. Gino Lucchetta, Aspro Studio</li>
-        <li><b>Team</b><br>Gaetano Selleri, Benedetto Selleri, Lorenzo Baldini, Sara Vergani, Sara Valassina</li>
-        <li><b>Importo lavori</b><br>€ 9.700.000</li>
+        <li><b>Cliente</b><br>Parco Nazionale Gran Paradiso</li>
+        <li><b>Luogo</b><br>Rovenaud, Valle Valsavarenche, Aosta, Italia</li>
+        <li><b>Anno</b><br>2007-2017</li>
+        <li><b>Superficie</b><br>15.000 mq (sup. edificata/built area 530 mq)</li>
+        <li><b>Stato</b><br>Completato</li>
+        <li><b>Tipologia</b><br>Parchi e giardini, Parco Museale</li>
+        <li><b>Partners</b><br>arch. Kurt Stecher, arch. Roberto Rosset</li>
+        <li><b>Team</b><br>G. Selleri, B. Selleri</li>
+        <li><b>Importo lavori</b><br>€ 1.420.000</li>
       </ul>
     </div>
   </section>
@@ -104,22 +105,6 @@
       <img src="../../library/progetti/parco-della-pace/pdp-4.jpg" alt="Parco della Pace - Vicenza" style="grid-column: 1 / span 2;">
       <img src="../../library/progetti/parco-della-pace/pdp-5.jpg" alt="Parco della Pace - Vicenza"style="grid-column: 3 / span 4;">
       <img src="../../library/progetti/parco-della-pace/pdp-7.jpg" alt="Parco della Pace - Vicenza" style="grid-column: span 3;">
-  </section>
-<!--#4--> 
-  <section class="duo" style="margin-bottom: 100px;">
-    <div>
-    </div>
-    <div>
-      <h3>Dati chiave</h3>
-      <ul class="cartouche">
-        <li><b>Canali</b><br>9 km</li>
-        <li><b>Laghi</b><br>52.000 mq</li>
-        <li><b>Aree umide allagabili</b><br>70.000 mq</li>
-        <li><b>Nuovi boschi</b><br>Grazie ad interventi di forestazione urbana (58.000 mq di boschi igrofili e 67.000 boschi mesofili)</li>
-        <li><b>Vaste praterie</b><br>360.000mq prati suddivisi in: prati alti e fioriti, prati rasati, prati umidi eseguiti con specie acquatiche e igrofile locali anche rare, e un grande “prato selvaggio)</li>
-        <li><b>Messa a dimora</b><br>8.600 piantine forestali (alberi e arbusti), e 1.400 piante sviluppate per filari regolari e irregolari</li>
-      </ul>
-    </div>
   </section>
 </main>
 
