--- a/it/progetti/piazzale-loreto.html
+++ b/it/progetti/piazzale-loreto.html
@@ -70,29 +70,30 @@
 <!--#1-->
   <section class="duo">
     <div style="margin-top: 100px;">
-      <h2>Parco Della Pace</h2>
-      <h1>Vicenza</h1>
+      <h2>Progetto di riqualificazione del Piazzale Loreto</h2>
+      <h1>Milano</h1>
     </div>
   </section>
 
   <section class="duo">
     <div>
-      <p>Il progetto riguarda una superficie complessiva di 650.000 m2 corrispondente a oltre metà dell’ex infrastruttura dismessa dell’Aeroporto Dal Molin. La grande dimensione e le caratteristiche specifiche del parco lo candidano a diventare un parco metropolitano, un polo attrattivo a scala territoriale. . Questa opera di trasformazione urbanistica e paesaggistica non è solo un tentativo di riconquista della natura dove l’acqua e la vegetazione sono protagoniste indiscusse, ma ha anche l’ambizione di essere un nuovo fulcro del sistema del verde della città di Vicenza, fungendo da congiunzione tra la città storica, i comuni adiacenti e un'area territoriale ancora più vasta. ). Il progetto si inserisce all’interno del contesto di pianificazione urbanistica territoriale del Veneto e si caratterizza come un grande intervento di valorizzazione, promozione e salvaguardia del territorio e del suo mosaico ecologico, esso è caratterizzato da zone umide, boschetti igrofili e planiziali, filari e siepi, prati selvaggi, orti. In questo senso il progetto è concepito nell’ottica di una Green Infrastructure, forte nelle sue interconnessioni territoriali. Come Infrastruttura verde, calcolata ingegneristicamente, il nuovo parco sarà in grado di erogare servizi ecosistemici a 360°, e grazie all’integrazione di soluzioni innovative come I SUDS (Sistemi Di Drenaggio Urbano Sostenibile) e le cosiddette Nature Based Solutions (NBS) contribuirà nella mitigazione gli effetti deleteri del cambiamento climatico e promuoverà la sostenibilità ambientale.</p>
-      <p>Dal punto di vista tecnico-ingegneristico partendo da un’area perfettamente piana è stata eseguita una movimentazione di 240.000 m³ di terreno con relativo riutilizzo al fine di  creare una nuova grande varietà di paesaggi e luoghi: canali, bacini, interventi di forestazione urbana che creano nuovi boschi, vaste praterie, aree gioco e aree dedicate allo sport, orti urbani e spazi spazi dedicati a eventi e alla cultura e alla didattica tramite la predisposizione di pannelli informativi e segnaletica per spiegare il valore ecologico del parco.</p>
-      <p>Il parco è stato progettato come un grande bacino di laminazione, capace di contenere e rilasciare lentamente fino a 100.000 metri cubi d'acqua. L'efficiente gestione delle risorse idriche, unita all'istituzione di nuovi ecosistemi umidi, va oltre il semplice drenaggio urbano: crea infatti nuovi spazi vitali per una ricca biodiversità, animale e vegetale. Grazie a questa fitta rete d’acqua, infatti, la fauna locale ha avuto l'opportunità di ripopolare rapidamente l’ambito, che si è arricchito non solo di uccelli legati all'ambiente acquatico, ma anche di altre specie ornitiche, anfibi, pesci, molluschi, artropodi insetti e mammiferi di piccola taglia.</p>
-      <p>Infine il progetto ha prestato particolare attenzione nel preservare integralmente le preesistenze, valorizzando anche la dimensione storica del sito e il riuso dell’esistente promuovendo un approccio sostenibile legato al ciclo di vita dei manufatti. In corrispondenza dell’ingresso principale del Parco, presso l'area denominata "Porta Est" è stato realizzato il recupero e la trasformazione degli ex hangar aeroportuali in spazi dedicati alla cultura, all'associazionismo e al tempo libero.</p>
+      <p>Piazzale Loreto è uno spazio urbano Milanese che, per collocazione nel tessuto della città, riveste da sempre un ruolo di cerniera tra la città un tempo più periferica e popolare e il centro storico consolidato, senza essere però mai riuscito a rappresentare adeguatamente le diverse realtà che lo contornano.</p>
+      <p>Il progetto intende quindi trasformare il piazzale in piazza: la piazza che, fin dalle prime Polis, ha sempre costituito luogo di aggregazione, di concentrazione, di unione di specificità diverse; architettura e disegno urbano indirizzano e facilitano l’orientamento fornendo in questo modo un ‘vassoio’ per accogliere i nuovi servizi e le funzionalità che il progetto prevede e che le comunità produrranno. Il progetto riorganizza e attualizza la funzione di spartitraffico della piazza, integrandone lo spazio attorno ad essa con attività, luoghi e proposte tali da favorirne la cosiddetta fruizione ‘lenta’, rendendo finalmente la piazza un gioiello appena fuori dal centro di Milano. Con ‘Una piazza in Loreto’ abbiamo la possibilità di creare un modello d’innovazione sociale capace di portare con sé la generazione di valore sociale, ambientale e culturale.</p>
+      <p>La progettazione degli spazi verdi ha puntato a riportare la natura in città attraverso l’introduzione di nuova vegetazione  che comprende alberi ad alto fusto ed arbusti autoctoni. Il nuovo bosco urbano comprende circa 500 alberi e 5000 arbusti tappezzanti disposti a definire nuovi spazi, isolati dal traffico circostante, divenendo il nuovo fulcro progettuale e ambientale della piazza.</p>
+      <p>É, infatti, un’opportunità per reinventare l’ibridazione tra le diverse parti ambientali, sociali ed urbane: unendo soggetti chiave, come le imprese sociali e nuove aree verdi, la piazza diviene un polo di cultura attiva dove servizi relativi ad una rinnovata viabilità pedonale, all’alimentazione, alla sostenibilità, all’ambiente si riuniscono per contribuire al miglioramento della vita dei cittadini, direttamente coinvolti nella vita della piazza.</p>
+      <p>Il progetto è stato selezionato per la seconda fase del concorso, arrivando terzo.</p>
     </div>
     <div>
       <ul class="cartouche">
-        <li><b>Cliente</b><br>Comune di Vicenza</li>
-        <li><b>Luogo</b><br>Vicenza, Italia</li>
-        <li><b>Anno</b><br>2017 - 2022</li>
-        <li><b>Superficie</b><br>650.000 mq</li>
-        <li><b>Stato</b><br>In corso di realizzazione</li>
-        <li><b>Tipologia</b><br>Riqualificazione ambientale e paesaggistica</li>
-        <li><b>Partners</b><br>ITS Engineering S.r.l., EMF Estudi Marti Franch, Franco Zagari, Geol. Gino Lucchetta, Aspro Studio</li>
-        <li><b>Team</b><br>Gaetano Selleri, Benedetto Selleri, Lorenzo Baldini, Sara Vergani, Sara Valassina</li>
-        <li><b>Importo lavori</b><br>€ 9.700.000</li>
+        <li><b>Cliente</b><br>C40 nell'ambito della competizione Reinventing Cities</li>
+        <li><b>Luogo</b><br>Milano, Italia</li>
+        <li><b>Anno</b><br>2021</li>
+        <li><b>Superficie</b><br>15.000 mq</li>
+        <li><b>Stato</b><br>Completato</li>
+        <li><b>Tipologia</b><br>Rigenerazione urbana</li>
+        <li><b>Partners</b><br>Bunch, Riccardo Rocco Associati, SCE Project, Polinomia srl, Greenwich srl, Moving srl, Wise srl, Cascina Biblioteca</li>
+        <li><b>Team</b><br>G.Selleri, M. Locatelli, S.Vergani, G.Olivetti, L.Baldini</li>
+        <li><b>Importo lavori</b><br>--</li>
       </ul>
     </div>
   </section>
@@ -104,22 +105,6 @@
       <img src="../../library/progetti/parco-della-pace/pdp-4.jpg" alt="Parco della Pace - Vicenza" style="grid-column: 1 / span 2;">
       <img src="../../library/progetti/parco-della-pace/pdp-5.jpg" alt="Parco della Pace - Vicenza"style="grid-column: 3 / span 4;">
       <img src="../../library/progetti/parco-della-pace/pdp-7.jpg" alt="Parco della Pace - Vicenza" style="grid-column: span 3;">
-  </section>
-<!--#4--> 
-  <section class="duo" style="margin-bottom: 100px;">
-    <div>
-    </div>
-    <div>
-      <h3>Dati chiave</h3>
-      <ul class="cartouche">
-        <li><b>Canali</b><br>9 km</li>
-        <li><b>Laghi</b><br>52.000 mq</li>
-        <li><b>Aree umide allagabili</b><br>70.000 mq</li>
-        <li><b>Nuovi boschi</b><br>Grazie ad interventi di forestazione urbana (58.000 mq di boschi igrofili e 67.000 boschi mesofili)</li>
-        <li><b>Vaste praterie</b><br>360.000mq prati suddivisi in: prati alti e fioriti, prati rasati, prati umidi eseguiti con specie acquatiche e igrofile locali anche rare, e un grande “prato selvaggio)</li>
-        <li><b>Messa a dimora</b><br>8.600 piantine forestali (alberi e arbusti), e 1.400 piante sviluppate per filari regolari e irregolari</li>
-      </ul>
-    </div>
   </section>
 </main>
 
